[gd_scene load_steps=3 format=3 uid="uid://doxhpf4ev3qws"]

[ext_resource type="Script" path="res://scripts/level_select.gd" id="1_w7371"]
[ext_resource type="Texture2D" uid="uid://bxuti1jhje13w" path="res://resource images/menubackground.png" id="2_vrvp5"]

[node name="level_select" type="Node"]
script = ExtResource("1_w7371")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vrvp5")

[node name="back" type="Button" parent="TextureRect"]
layout_mode = 0
offset_right = 190.0
offset_bottom = 163.0
theme_override_font_sizes/font_size = 51
text = "Go 
back?"

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -780.5
offset_right = 780.5
offset_bottom = 343.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 251
text = "Select a level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="levelSelection" type="GridContainer" parent="."]
offset_left = 285.0
offset_top = 364.0
offset_right = 1497.0
offset_bottom = 968.0
columns = 4

[node name="lvl1" type="Button" parent="levelSelection"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_colors/font_color = Color(0.17266, 3.85046e-07, 0.966075, 1)
theme_override_font_sizes/font_size = 201
text = "1"
icon_alignment = 1

[node name="lvl2" type="Button" parent="levelSelection"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_colors/font_color = Color(0.17266, 3.85046e-07, 0.966075, 1)
theme_override_font_sizes/font_size = 201
text = "2
"
icon_alignment = 1

[node name="lvl3" type="Button" parent="levelSelection"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_colors/font_color = Color(0.17266, 3.85046e-07, 0.966075, 1)
theme_override_font_sizes/font_size = 201
text = "3"
icon_alignment = 1

[node name="lvl4" type="Button" parent="levelSelection"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_colors/font_color = Color(0.17266, 3.85046e-07, 0.966075, 1)
theme_override_font_sizes/font_size = 201
text = "4"
icon_alignment = 1

[node name="lvl5" type="Button" parent="levelSelection"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_colors/font_color = Color(0.17266, 3.85046e-07, 0.966075, 1)
theme_override_font_sizes/font_size = 201
text = "5"
icon_alignment = 1

[connection signal="pressed" from="TextureRect/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="levelSelection/lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="levelSelection/lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="levelSelection/lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="levelSelection/lvl4" to="." method="_on_lvl_4_pressed"]
[connection signal="pressed" from="levelSelection/lvl5" to="." method="_on_lvl_5_pressed"]
